make a nice card

--- a/index.html
+++ b/index.html
@@ -3,21 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title> Crad </title>
 </head>
 <body>
     <div class="card">
         <div class="card-image">
-            <img src="" alt="">
+            <img src="./images/card-image.jpg" alt="image">
         </div>
         <div class="card-content">
-            <h1>Card Title</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
-            <button
-            title="Read More"
+            <h1
+            class="card-title"
+            >Card Title</h1>
+            <p
+            class="card-description"
             >
-                <a href="#">Read More</a>
-            </button>
+            Advanced card and responsive , its just simple card with image and title and description and button to read more
+            </p>
+            <div class="button-wrapper">
+                <button
+                title="Read More"
+                >
+                    <a href="#">Read More</a>
+                </button>
+            </div>
         </div>
     </div>
 </body>
