arabic landing page

--- a/Landing-Page/Index.html
+++ b/Landing-Page/Index.html
@@ -6,23 +6,20 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.0.7/css/boxicons.min.css">
     <title> 
-      Landing Page    
+       Learn-HTML-CSS-Advanced-Concept/Landing-Page/Index.html  
     </title>
 </head>
 <body>
   <nav
   class="navbar"
   >
-  <div class="nav-logo">
-    <img src="./images/logo.png" alt="logo" />
-  </div>
   <div class="nav-links">
     <ul>
       <li>
         <div class="castome-select">
           <div class="text-wrapper-icon">
             <p>
-              Products
+              الحلول
             </p>
             <i
             id="icon"
@@ -32,13 +29,49 @@
           </div>
           <div class="items-container">
             <div class="item">
-              <a href="#">Product 1</a>
+              <a href="#">
+                الحلول الرئيسية
+              </a>
             </div>
             <div class="item">
-              <a href="#">Product 2</a>
+              <a href="#">
+                الحلول الفرعية
+              </a>
            </div>
             <div class="item">
-              <a href="#">Product 3</a>
+              <a href="#">
+                الحلول الثالثة
+              </a>
+            </div>
+          </div>
+        </div>
+      <li>
+        <div class="castome-select">
+          <div class="text-wrapper-icon">
+            <p>
+              المنتجات
+            </p>
+            <i
+            id="icon"
+            class="bx bx-chevron-down"
+            >
+            </i>
+          </div>
+          <div class="items-container">
+            <div class="item">
+              <a href="#">
+                المنتجات الرئيسية
+              </a>
+            </div>
+            <div class="item">
+              <a href="#">
+                المنتجات الفرعية
+              </a>
+           </div>
+            <div class="item">
+              <a href="#">
+                المنتجات الثالثة
+              </a>
             </div>
           </div>
         </div>
@@ -47,7 +80,7 @@
         <div class="castome-select">
           <div class="text-wrapper-icon">
             <p>
-              Products
+              الخدمات
             </p>
             <i
             id="icon"
@@ -57,13 +90,19 @@
           </div>
           <div class="items-container">
             <div class="item">
-              <a href="#">Product 1</a>
+              <a href="#">
+                الخدمات الرئيسية
+              </a>
             </div>
             <div class="item">
-              <a href="#">Product 2</a>
+              <a href="#">
+                الخدمات الفرعية
+              </a>
            </div>
             <div class="item">
-              <a href="#">Product 3</a>
+              <a href="#">
+                الخدمات الثالثة 
+              </a>
             </div>
           </div>
         </div>
@@ -72,7 +111,7 @@
         <div class="castome-select">
           <div class="text-wrapper-icon">
             <p>
-              Products
+              المنصة
             </p>
             <i
             id="icon"
@@ -82,28 +121,53 @@
           </div>
           <div class="items-container">
             <div class="item">
-              <a href="#">Product 1</a>
+              <a href="#">
+                المنصة الرئيسية
+              </a>
             </div>
             <div class="item">
-              <a href="#">Product 2</a>
+              <a href="#">
+                المنصة الفرعية
+              </a>
            </div>
             <div class="item">
-              <a href="#">Product 3</a>
+              <a href="#">
+                المنصة الثالثة
+              </a>
             </div>
           </div>
         </div>
-      </li>
     </ul>
   </div>
-  <div class="btns-conatiner">
-    <button class="btn btn-sign-in">
-      Sign In
-    </button>
-    <button class="btn btn-sign-up">
-      Sign Up
-    </button>
-  </div>
+  
   </nav>
+
+  <section>
+    <div class="hero-title">
+      <h1>
+        تحسين الإنتاجية <br>
+        بشكل كبير
+    </div>
+    <p
+    class="hero-paragraph"
+    >
+     تطبيق متكامل لإدارة المشاري على الإنترنت يساعدك على تحسين الإنتاجية وتنظيم العمل وتوفير الوقت والمال
+     و تحسين الإنتاجية وتنظيم العمل وتوفير الوقت والمال
+  </p>
+  
+    <div class="btn-container-demo-startd">
+      <button class="btn btn-start">
+        ابدأ الآن
+      </button>
+      <button class="btn btn-demo">
+        التجربة المجانية
+      </button>
+    </div>
+  </section>
+
+  <div class="dash-board">
+    <img src="./images/dash.png" alt="" srcset="">
+  </div>
 <script
 src="./main.js"
 >
