--- a/Landing-Page/Index.html
+++ b/Landing-Page/Index.html
@@ -139,7 +139,13 @@
         </div>
     </ul>
   </div>
-  
+  <div class="menu">
+    <i
+    class="bx bx-menu"
+    id="menu"
+    >
+    </i>
+  </div>
   </nav>
 
   <section>
