add the gird svg

--- a/Landing-Page/Index.html
+++ b/Landing-Page/Index.html
@@ -10,6 +10,9 @@
     </title>
 </head>
 <body>
+  <div class="grid">
+    <img src="./images/grid.svg" alt="" srcset="">
+  </div>
   <nav
   class="navbar"
   >
