--- a/Landing-Page/Index.html
+++ b/Landing-Page/Index.html
@@ -13,6 +13,10 @@
   <div class="grid">
     <img src="./images/grid.svg" alt="" srcset="">
   </div>
+
+  <div class="aclas">
+    <img src="./images/cuckoo2.png" alt="" srcset="">
+  </div>
   <nav
   class="navbar"
   >
