update the code

--- a/Landing-Page/Index.html
+++ b/Landing-Page/Index.html
@@ -26,30 +26,8 @@
         <div class="castome-select">
           <div class="text-wrapper-icon">
             <p>
-              الحلول
+              الرئيسية
             </p>
-            <i
-            id="icon"
-            class="bx bx-chevron-down"
-            >
-            </i>
-          </div>
-          <div class="items-container">
-            <div class="item">
-              <a href="#">
-                الحلول الرئيسية
-              </a>
-            </div>
-            <div class="item">
-              <a href="#">
-                الحلول الفرعية
-              </a>
-           </div>
-            <div class="item">
-              <a href="#">
-                الحلول الثالثة
-              </a>
-            </div>
           </div>
         </div>
       <li>
@@ -58,28 +36,6 @@
             <p>
               المنتجات
             </p>
-            <i
-            id="icon"
-            class="bx bx-chevron-down"
-            >
-            </i>
-          </div>
-          <div class="items-container">
-            <div class="item">
-              <a href="#">
-                المنتجات الرئيسية
-              </a>
-            </div>
-            <div class="item">
-              <a href="#">
-                المنتجات الفرعية
-              </a>
-           </div>
-            <div class="item">
-              <a href="#">
-                المنتجات الثالثة
-              </a>
-            </div>
           </div>
         </div>
       </li>
@@ -120,28 +76,6 @@
             <p>
               المنصة
             </p>
-            <i
-            id="icon"
-            class="bx bx-chevron-down"
-            >
-            </i>
-          </div>
-          <div class="items-container">
-            <div class="item">
-              <a href="#">
-                المنصة الرئيسية
-              </a>
-            </div>
-            <div class="item">
-              <a href="#">
-                المنصة الفرعية
-              </a>
-           </div>
-            <div class="item">
-              <a href="#">
-                المنصة الثالثة
-              </a>
-            </div>
           </div>
         </div>
     </ul>
@@ -177,7 +111,6 @@
       </button>
     </div>
   </section>
-
   <div class="dash-board">
     <img src="./images/dash.png" alt="" srcset="">
   </div>
