make the side bar for the phone device

--- a/Landing-Page/Index.html
+++ b/Landing-Page/Index.html
@@ -81,11 +81,9 @@
     </ul>
   </div>
   <div class="menu">
-    <i
-    class="bx bx-menu"
+    <img
     id="menu"
-    >
-    </i>
+    src="./images/hamburger-menu-svgrepo-com.svg" alt="" srcset="">
   </div>
   </nav>
 
