--- a/Landing-Page/Index.html
+++ b/Landing-Page/Index.html
@@ -25,17 +25,21 @@
       <li>
         <div class="castome-select">
           <div class="text-wrapper-icon">
+            <a href="#">
             <p>
               الرئيسية
             </p>
+          </a>
           </div>
         </div>
       <li>
         <div class="castome-select">
           <div class="text-wrapper-icon">
-            <p>
-              المنتجات
-            </p>
+            <a href="./services.html">
+              <p>
+                المنتجات
+              </p>
+            </a>
           </div>
         </div>
       </li>
