--- a/login-form/index.html
+++ b/login-form/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="input-group">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password" placeholder="Enter your password">
+                <input type="password" name="password" id="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;">
             </div>
            <div class="bottom">
             <div class="group">
