--- a/login-form/index.html
+++ b/login-form/index.html
@@ -45,11 +45,13 @@
         </div>
 
             <button
+            id="changeColorButton"
             class="btn btn-primary"
             >
             Sing in
             </button>
             <button
+
             class="btn btn-secondary"
             >
             <img src="./images/google.svg" alt="" srcset="">
@@ -68,5 +70,6 @@
             <img src="./images/image.jpg" alt="" srcset="">
         </div>
     </form>
+    <script src="./main.js"></script>
 </body>
 </html>
